--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -11,16 +11,15 @@
     <!-- Scroll View is used in case drink description is too long -->
     <ScrollView
         android:id="@+id/dialog_scroll"
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true">
+
             <TextView
                 android:id="@+id/drink_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:paddingTop="160dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
@@ -28,6 +27,7 @@
                 android:textColor="#FFFFFF"
                 android:gravity="center"
                 />
+
     </ScrollView>
 
 
@@ -44,9 +44,20 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
+        <TextView
+            android:id="@+id/drink_recipe"
+            android:layout_marginTop="72dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:textSize="32sp"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/drink_name" />
 
 
     <LinearLayout
+        android:id="@+id/dialog_button_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
