--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -14,46 +14,57 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/drink_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="72dp"
+                android:fontFamily="@font/sign_painter"
+                android:textColor="#FC8E85"
+                android:textSize="56sp"
+                android:gravity="center"
+                android:layout_gravity="center" />
 
             <TextView
                 android:id="@+id/drink_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="160dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:textSize="32sp"
                 android:textColor="#FFFFFF"
                 android:gravity="center"
-                />
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:id="@+id/drink_recipe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:fontFamily="@font/sign_painter"/>
+
+        </LinearLayout>
+
+
+
 
     </ScrollView>
 
 
-        <TextView
-            android:id="@+id/drink_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:fontFamily="@font/sign_painter"
-            android:textColor="#FC8E85"
-            android:textSize="56sp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:id="@+id/drink_recipe"
-            android:layout_marginTop="72dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:textSize="32sp"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/drink_name" />
+
+
 
 
     <LinearLayout
