deleted ingredient gravity

--- a/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
@@ -87,6 +87,7 @@
 
     <ImageView
         android:id="@+id/settings"
+        android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
