--- a/Beerig_App/app/src/main/res/values/colors.xml
+++ b/Beerig_App/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="light_grey">#D3D3D3</color>
     <color name="orange_red">#FF4500</color>
     <color name="very_light_grey">#E3E3E3</color>
+    <color name="black">#000000</color>
 </resources>
