--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -48,11 +48,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
-                android:textSize="32sp"
-                android:layout_marginTop="16dp" />
+                android:textSize="22sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"/>
 
         </LinearLayout>
-
     </ScrollView>
 
     <LinearLayout
