--- a/Beerig_App/app/src/main/res/layout/main.xml
+++ b/Beerig_App/app/src/main/res/layout/main.xml
@@ -63,7 +63,8 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:enabled="false"
-                android:text="Send" />
+                android:text="Send"
+                android:visibility="invisible"/>
 
         </RelativeLayout>
     </LinearLayout>
