--- a/Beerig_App/app/src/main/res/layout/activity_rum.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_rum.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--
+@author Brady Murphy
+@author Andrew
+@version July 22, 2018
+-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -22,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-
+        <!-- Table layout used to represent the drinks in a user friendly fashion -->
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,8 +55,7 @@
 
             </TableRow>
 
-
-
+            <!-- drink row 1 -->
            <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -77,6 +82,7 @@
 
             </TableRow>
 
+            <!-- drink row 2 -->
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
