--- a/Beerig_App/app/src/main/res/layout/activity_tequila.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_tequila.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--
+@author Brady Murphy
+@author Andrew
+@version July 10, 2018
+-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -20,6 +26,7 @@
         android:layout_height="wrap_content"
         >
 
+        <!-- Table layout used to represent the drinks in a user friendly fashion -->
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
