--- a/Beerig_App/app/src/main/res/layout/main.xml
+++ b/Beerig_App/app/src/main/res/layout/main.xml
@@ -14,8 +14,9 @@
             android:id="@+id/btn_select"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:text="Connect" />
+            android:layout_margin="8dp"
+            android:text="Connect"
+            android:background="@color/peach"/>
     </LinearLayout>
 
     <LinearLayout
@@ -38,7 +39,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
-                android:layout_toLeftOf="@+id/sendButton"
                 android:ems="10"
                 android:enabled="false"
                 android:fontFamily="1"
@@ -51,20 +51,9 @@
                 android:id="@+id/listMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/sendButton"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true" >
             </ListView>
-
-            <Button
-                android:id="@+id/sendButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:enabled="false"
-                android:text="Send"
-                android:visibility="invisible"/>
 
         </RelativeLayout>
     </LinearLayout>
