--- a/Beerig_App/app/src/main/res/values/colors.xml
+++ b/Beerig_App/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="orange_red">#FF4500</color>
     <color name="very_light_grey">#E3E3E3</color>
     <color name="black">#000000</color>
+    <color name="peach">#FC8E85</color>
 </resources>
