--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:textSize="32sp"
+                android:textSize="28sp"
                 android:textColor="#FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"/>
@@ -48,9 +48,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
-                android:textSize="22sp"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="16dp"/>
+                android:textSize="24sp"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="32dp"
+                android:paddingBottom="8dp"/>
 
         </LinearLayout>
     </ScrollView>
