Working on PartyMode, still needs more work

--- a/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
@@ -38,6 +38,7 @@
         android:clickable="true"
         android:contentDescription="@string/Start_Partying"
         android:focusable="true"
+        android:onClick="openPartyDialog"
         android:src="@drawable/party_button" />
 
     <!-- **Running into issues with this ImageView**
