Fixed the drink reference so party mode dialogue doesn't crash anymore

--- a/Beerig_App/app/src/main/res/layout/main.xml
+++ b/Beerig_App/app/src/main/res/layout/main.xml
@@ -46,7 +46,8 @@
                 android:lines="1"
                 android:maxLength="20"
                 android:maxLines="1"
-                android:shadowRadius="1" />
+                android:shadowRadius="1"
+                android:visibility="invisible"/>
 
             <ListView
                 android:id="@+id/listMessage"
