created the party mode dialog and defined how the backend of party mode works. Complete functionality

--- a/Beerig_App/app/src/main/res/values/colors.xml
+++ b/Beerig_App/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="very_light_grey">#E3E3E3</color>
     <color name="black">#000000</color>
     <color name="navy">#374E5E</color>
+    <color name="party_purple">#E09EF1</color>
+    <color name="white">#FFFFFF</color>
 </resources>
