--- a/Beerig_App/app/src/main/res/layout/activity_vodka.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_vodka.xml
@@ -22,6 +22,19 @@
         android:contentDescription="@string/rum"
         android:src="@drawable/vodka_title" />
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="16dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/vodka"
+        android:src="@drawable/back_main_button"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="goBack"/>
 
     <!-- creates a horizontal scroll for users -->
     <HorizontalScrollView
